# iot-shortcut-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  NOTICE  README.md
boards/arm/lmt_som_nrf9151/: Kconfig.board  Kconfig.defconfig  board.cmake  lmt_som_nrf9151.dts  lmt_som_nrf9151.yaml  lmt_som_nrf9151_common-pinctrl.dtsi  lmt_som_nrf9151_common.dtsi  lmt_som_nrf9151_defconfig  lmt_som_nrf9151_ns.dts  lmt_som_nrf9151_ns.yaml  lmt_som_nrf9151_ns_defconfig  lmt_som_nrf9151_partition_conf.dtsi
boards/arm/lmt_som_nrf9160/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  lmt_som_nrf9160.dts  lmt_som_nrf9160.yaml  lmt_som_nrf9160_common-pinctrl.dtsi  lmt_som_nrf9160_common.dtsi  lmt_som_nrf9160_defconfig  lmt_som_nrf9160_ns.dts  lmt_som_nrf9160_ns.yaml  lmt_som_nrf9160_ns_defconfig  lmt_som_nrf9160_partition_conf.dtsi  pre_dt_board.cmake
boards/lmt/lmt9151som/: Kconfig.defconfig  Kconfig.lmt9151som  board.cmake  board.yml  lmt9151som_nrf9151.dts  lmt9151som_nrf9151.yaml  lmt9151som_nrf9151_common-pinctrl.dtsi  lmt9151som_nrf9151_common.dtsi  lmt9151som_nrf9151_defconfig  lmt9151som_nrf9151_ns.dts  lmt9151som_nrf9151_ns.yaml  lmt9151som_nrf9151_ns_defconfig
doc/: README.md  doxy_config
inc/: A2.pb.h  lmt_coap_manager.h  lmt_common.h  lmt_filesystem.h  lmt_gnss_assistance.h  lmt_gnss_handler.h  lmt_mcc_location_table.h  lmt_monitor.h  lmt_proto_handler.h  lmt_sdk_api.h  lmt_settings.h  lmt_som_event_emitter.h  lmt_storage_manager.h
samples/: README.md
samples/ek_demo/: CMakeLists.txt  Kconfig  lmt9151som_nrf9151_ns.overlay  prj.conf
samples/ek_demo/inc/: adc_pwm.h
samples/ek_demo/src/: bmp.c  main.c  terminal_cmd_handler.c
samples/ek_sensor_example/: Kconfig  README.md  prj.conf
samples/ek_sensor_example/inc/: app_status_bits.h  bmp.h  lis3dh.h  lmt_sdk_app.h  terminal_cmd_handler.h
samples/ek_sensor_example/src/: adc_pwm.c  lis3dh.c  main.c
samples/gnss_demo/: CMakeLists.txt  README.md  prj.conf
samples/gnss_demo/inc/: lmt_sdk_app.h
samples/gnss_demo/src/: main.c  terminal_cmd_handler.c
samples/hello2_c/: .clang-tidy  CMakeLists.txt  Kconfig  README.md  prj.conf
samples/hello2_c/etc/: COAP.json  COAP.json.sample
samples/hello2_c/inc/: lmt_sdk_app.h
samples/hello2_c/src/: main.c
samples/hello_c/: .clang-format  CMakeLists.txt  Kconfig  README.md  prj.conf
samples/hello_c/child_image/: mcuboot.conf
samples/hello_c/inc/: terminal_cmd_handler.h
samples/hello_c/src/: main.c  terminal_cmd_handler.c
samples/hello_c/sysbuild/: mcuboot.conf
samples/libbuilder/: .gitignore  CMakeLists.txt  Kconfig  prj.conf  sysbuild.conf
samples/libbuilder/doc/: README.md
samples/libbuilder/etc/: COAP.json
samples/libbuilder/src/: main.c
scripts/: bin2c_array.py  gen_c_glue.py  gen_json_bin.py  gen_lmt_ddt_fs_lfs.py  gen_lmt_ddt_fs_nvs.py  gen_lmt_ddt_fs_start.py
sysbuild/: mcuboot.conf
zephyr/: module.yml
